--- a/app/views/maintenance/scrape_results.html.erb
+++ b/app/views/maintenance/scrape_results.html.erb
@@ -22,7 +22,7 @@
       <% end %>
       <% unless @duplicate_albums.nil? %>
         <% @duplicate_albums.each do |url| %>
-          <% if url[1].reference.nil? == false%>
+          <% if url[1].references.blank? == false%>
             <div><%= link_to url[0], url[0] %>: <%= link_to url[1].references.first.url, url[1] %> <% if url[1].references.first.url == url[0] %><%= image_tag('/assets/tick.png') %><% else %> <%= image_tag('/assets/cross.png') %><% end %></div>
           <% end %>
         <% end %>
@@ -46,7 +46,7 @@
           <%= link_to album.internal_name, album %> (ID: <%= album.id %>)  <%= link_to "Edit", edit_album_path(album)  %><br>
           <%= album.classification %><br>
           <%= album.release_date %> <br>
-          <%= link_to album.reference.first[1], album.reference.first[1] %>   
+          <%= link_to album.references.first.url, album.references.first.url %>   
         </div>
       </div>
     <% end %>    
