--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -3,7 +3,7 @@
 @import "colors/light_blue_scheme";
 
 //
-#large-view {
+#grid-view {
   .sidebar, #grid-content {
     overflow: hidden;
     margin-bottom: 0;
