--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -4,11 +4,8 @@
 
 //Forms
 
-#super-view {
+#full-view {
   @include make-row();
-  form#new_user_session {
-    text-align: center;
-  }
   #left-sidebar-form-view{
     @include make-sm-column(4);
   }
@@ -21,23 +18,6 @@
       text-decoration: underline;
     }
   }
-}
-
-
-.single-form {
-  background-color: $well-background-color;
-  border: 1px solid $border-color;
-  padding: 18px 15px 18px 15px;
-  margin-bottom: 15px;
-  label {font-weight: normal;}
-  .section-content {
-    padding-left: 30px;
-    margin-bottom: 10px;
-    .form-checkbox {
-      margin-left: 30px;
-    }
-  }
-  #notice {text-align: center;}
 }
 
 .form-horizontal select {
