--- a/app/views/layouts/forms/_form.html.erb
+++ b/app/views/layouts/forms/_form.html.erb
@@ -1,4 +1,4 @@
-<% content_for :form_view do %>
+<div id="form">
   <%= form_for records.first, :html => {:class => "form-horizontal", multipart: true}, url: url do |form| %>
     <% records.each do |record| %>
       <%= fields_helper(record, fields: fields, multi_flag: multi_flag, form_prefix: form_prefix) %>
@@ -10,4 +10,4 @@
       </div>
     <% end %>
   <% end %>
-<% end %>
+</div>
