added api to search function

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -9,6 +9,7 @@
     <% @issues.each do |issue| %>
       <%= render "issues/display_issue", issue: issue, :truncate_length => 200 %>
     <% end %>
+    <%= paginate @issues %>
   </div>
   
   <div id="sidebar">
