--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,7 +31,7 @@
           <div class="panel-heading">Records Mentioned in This Post</div>
           <div class="nav nav-pills nav-stacked">
             <% @post.models.each do |record| %>
-              <li><%= link_to (raw "#{record.class.to_s}: #{name_language_helper(record, current_user, 0)}"), record %></li>
+              <li><%= link_to (raw "#{record.class.to_s}: #{language_helper(record, :name)}"), record %></li>
             <% end %>
           </div>
         </div>
