--- a/app/views/pages/front_page.html.erb
+++ b/app/views/pages/front_page.html.erb
@@ -34,7 +34,7 @@
             <% if n.odd? %>
               </div><br>
             <% end %> 
-            <% if n.even? and n == @albums.count - 1 %>     
+            <% if n.even? && n == @albums.count - 1 %>     
               </div>
             <% end %>    
           <% end %>
