--- a/app/views/layouts/forms/fields/_artist_relations.html.erb
+++ b/app/views/layouts/forms/fields/_artist_relations.html.erb
@@ -14,5 +14,9 @@
     <% end %>
   <% end %>
   <div id='<%= "Artists" + record.id.to_s %>'></div>
-  <%= link_to "Add an Artist", add_model_path(parent_div: "#Artists#{record.id.to_s}", field_names: "#{form_prefix}[new_artists][id]", artist_category_names: "#{form_prefix}[new_artists][category][]", autocomplete_model: "artist" ), :remote => true %></br></br>
+  <%= link_to "Add an Artist", add_model_path(parent_div: "#Artists#{record.id.to_s}",
+  														 field_names: "#{form_prefix}[new_artists][id]",
+  														 artist_category_names: "#{form_prefix}[new_artists][category][]",
+  														 autocomplete_model: "artist",
+  														 artist_display_names: "#{form_prefix}[new_artists][display_name]"), :remote => true %></br></br>
 </div>
