--- a/app/views/maintenance/scrape_results.html.erb
+++ b/app/views/maintenance/scrape_results.html.erb
@@ -1,14 +1,14 @@
-<% content_for :title do %>Scrape Results - Post #<%= @post.id%><% end %>
+<% content_for :title do %>Scrape Results - Log #<%= @log.id%><% end %>
 
 <% content_for :header do %>
-  <h2 class="text-center">Scrape Results (Post #<%= @post.id%>: <%= @albums.count %>/<%= @count %> Albums)</h2>
+  <h2 class="text-center">Scrape Results (Log #<%= @log.id%>: <%= @albums.count %>/<%= @count %> Albums)</h2>
 
 <% end %>
-<h5>Created at: <%= @post.created_at %></h5>
-<h5>Last 58 characters: <%= @post.content[-58..-1] %></h5>
+<h5>Created at: <%= @log.created_at %></h5>
+<h5>Last 58 characters: <%= @log.content[-58..-1] %></h5>
 <div>
-  <%= link_to "Previous Post", maintenance_scrape_results_path(:post_id => @post.id - 1) %>
-  <%= link_to "Next Post", maintenance_scrape_results_path(:post_id => @post.id + 1) %>
+  <%= link_to "Previous Post", maintenance_scrape_results_path(:post_id => @log.id - 1) %>
+  <%= link_to "Next Post", maintenance_scrape_results_path(:post_id => @log.id + 1) %>
 </div>
 
 <div class='row'>
@@ -28,11 +28,11 @@
         <% end %>
       <% else %>
       <div>No Failed URLs!</div>
-      <% end %>  
+      <% end %>
     </div>
     <div>
       <h5>Raw Content</h5>
-      <%= simple_format @post.content %>
+      <%= simple_format @log.content %>
     </div>
   </div>
   <div class='col-md-6'>
@@ -46,11 +46,11 @@
           <%= link_to album.internal_name, album %> (ID: <%= album.id %>)  <%= link_to "Edit", edit_album_path(album)  %><br>
           <%= album.classification %><br>
           <%= album.release_date %> <br>
-          <%= link_to album.references.first.url, album.references.first.url %>   
+          <%= link_to album.references.first.url, album.references.first.url %>
         </div>
       </div>
-    <% end %>    
-  </div> 
+    <% end %>
+  </div>
 </div>
 
 
