Fixed javascript import error

--- a/app/views/notifier/password_reset_instructions.html.erb
+++ b/app/views/notifier/password_reset_instructions.html.erb
@@ -1,8 +1,19 @@
-<body>
-  Greetings,<br><br>
-  Thank you for using Hibiki. A password reset has been 
-  <br>requested for this email. If you did not make this 
-  <br>request, ignore this email. If you did make this request,
-  <br>please follow the link below. It is valid for 3 hours.
-  <br><br><%= link_to 'Reset Password', @url %>
-</body>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <style>
+    /* Email styles need to be inline */
+  </style>
+</head>
+
+  <body>
+    Greetings,<br><br>
+    Thank you for using Hibiki. A password reset has been
+    <br>requested for this email. If you did not make this
+    <br>request, ignore this email. If you did make this request,
+    <br>please follow the link below. It is valid for 3 hours.
+    <br><br><%= link_to 'Reset Password', @url %>
+  </body>
+</html>
+
