--- a/app/views/maintenance/scrape_results.html.erb
+++ b/app/views/maintenance/scrape_results.html.erb
@@ -7,8 +7,8 @@
 <h5>Created at: <%= @log.created_at %></h5>
 <h5>Last 58 characters: <%= @log.content[-58..-1] %></h5>
 <div>
-  <%= link_to "Previous Post", maintenance_scrape_results_path(:post_id => @log.id - 1) %>
-  <%= link_to "Next Post", maintenance_scrape_results_path(:post_id => @log.id + 1) %>
+  <%= link_to "Previous Log", maintenance_scrape_results_path(:log_id => @log.id - 1) %>
+  <%= link_to "Next Log", maintenance_scrape_results_path(:log_id => @log.id + 1) %>
 </div>
 
 <div class='row'>
